# ChangeLog for x11-wm/windowlab
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-wm/windowlab/ChangeLog,v 1.11 2005/05/22 15:11:56 usata Exp $

*windowlab-1.29 (22 May 2005)

  22 May 2005; Mamoru KOMACHI <usata@gentoo.org> +windowlab-1.29.ebuild:
  Version bumped. This fixes bug #91188.

  10 Oct 2004; Mamoru KOMACHI <usata@gentoo.org> -windowlab-1.17.ebuild,
  -windowlab-1.20.ebuild, windowlab-1.24.ebuild:
  Stable on x86 and ppc.

  13 Aug 2004; Tom Martin <slarti@gentoo.org> windowlab-1.24.ebuild:
  Marked ~amd64.

*windowlab-1.24 (24 Jun 2004)

  24 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> metadata.xml,
  windowlab-1.23.ebuild, +windowlab-1.24.ebuild:
  Version bumped. Marked 0.23 as stable.

*windowlab-1.23 (23 May 2004)

  23 May 2004; <usata@gentoo.org> windowlab-1.07.ebuild,
  windowlab-1.12.ebuild, windowlab-1.17.ebuild, windowlab-1.20.ebuild,
  windowlab-1.23.ebuild:
  Version bumped. Don't assign default to S. Marked 1.17 and 1.20 stable on
  x86. Added ~ppc to 1.23. Removed old ebuilds. Closing bug #48964

*windowlab-1.20 (21 Jan 2004)

  21 Jan 2004; Nick Hadaway <raker@gentoo.org> windowlab-1.20.ebuild:
  Just a version bump.  I love this window manager.

  04 Nov 2003; Brandon Hale <tseng@gentoo.org> windowlab-1.12.ebuild:
  Marking 1.12 stable on x86

*windowlab-1.17 (03 Nov 2003)

  03 Nov 2003; Brandon Hale <tseng@gentoo.org> windowlab-1.17.ebuild:
  Version bump.

*windowlab-1.12 (20 Jul 2003)

  20 Jul 2003; Nick Hadaway <raker@gentoo.org> windowlab-1.12.ebuild:
  Version bump.  Bug fixes and feature enhancements.  (Even though the
  author has said there will be no more new features) :)  

*windowlab-1.07 (20 Jun 2003)

  20 Jun 2003; mkeadle <mkeadle@gentoo.org> windowlab-1.07.ebuild:
  initial import. thank go to Bjorn Lindstrom <bkhl@privat.utfors.se> for the
  ebuild submission in bug #17617.
