@@ -1,3 +1,4 @@
+MD5 4d456d49911610c052ad1c07615f18ac windowlab-1.30.ebuild 833
 MD5 94ddcecb8cc21af9a6b5c9ab323008c3 windowlab-1.24.ebuild 831
 MD5 e53b30df7d03175a0babc2bbdae609a6 windowlab-1.23.ebuild 830
 MD5 3e3144874291be1788c333608137d929 ChangeLog 1915
@@ -5,4 +6,5 @@ MD5 631a87a06351ea5153017bd01ef1a90a metadata.xml 744
 MD5 4d456d49911610c052ad1c07615f18ac windowlab-1.29.ebuild 833
 MD5 a080a47d54f0bd1d58d26e3a290d4b35 files/digest-windowlab-1.23 63
 MD5 95b08a525f205ad2ef7f4154dde55b03 files/digest-windowlab-1.29 63
+MD5 4e0ae4fc74cdb9ef64f7728a866f5de3 files/digest-windowlab-1.30 63
 MD5 aaaec4eef2ed6342a0b232f8944a7eb8 files/digest-windowlab-1.24 63
