@@ -1,16 +1,16 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/windowlab/windowlab-1.23.ebuild,v 1.3 2004/06/24 23:46:00 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/windowlab/windowlab-1.30.ebuild,v 1.1 2005/05/28 18:43:03 usata Exp $
 
 IUSE=""
 
-DESCRIPTION="some Amiga GUI rules + aewm 1.1.2 + 8 1/2 (from Plan9) = windowlab"
+DESCRIPTION="WindowLab is a small and simple window manager of novel design."
 HOMEPAGE="http://www.nickgravgaard.com/windowlab/"
 SRC_URI="http://www.nickgravgaard.com/${PN}/${P}.tar"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="x86 ppc"
+KEYWORDS="~x86 ~ppc ~amd64"
 
 DEPEND="virtual/x11"
 
