@@ -1,6 +1,12 @@
 # ChangeLog for x11-wm/windowlab
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/windowlab/ChangeLog,v 1.11 2005/05/22 15:11:56 usata Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/windowlab/ChangeLog,v 1.12 2005/05/28 18:43:03 usata Exp $
+
+*windowlab-1.30 (28 May 2005)
+
+  28 May 2005; Mamoru KOMACHI <usata@gentoo.org> -windowlab-1.23.ebuild,
+  -windowlab-1.29.ebuild, +windowlab-1.30.ebuild:
+  Version bumped; bug #93650.
 
 *windowlab-1.29 (22 May 2005)
 
